// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelItemLink renders 1`] = `
<PanelItem
  description="Bar"
  icon="Baz"
  onClick={[Function]}
  title="Foo"
/>
`;

exports[`PanelItemLink renders 2`] = `
<PanelItem
  description="Bar"
  highlight={true}
  icon="Baz"
  onClick={[Function]}
  title="Foo"
/>
`;
